--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -4,7 +4,8 @@ on:
   schedule:
   # Runs every 3 hours, at the 12th minute (so at 00:12, 03:12, 06:12, etc...)
   - cron: "12 */3 * * *"
-
+  workflow_dispatch:
+  
 jobs:
   # Single job, post the tweet.
   post_tweet:
